[package]
name = "simple-home-dir"
version = "0.4.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/splurf/simple-home-dir"
authors = ["Evan Schwartzentruber <evandotschwartzentruber@gmail.com>"]
description = "Effortlessly retrieve the user's home directory (cross-platform)."
keywords = ["home", "directory", "fast", "path", "lightweight"]
categories = ["accessibility"]
exclude = [".github/", ".gitignore", "LICENSE", "README.md", "tests/"]

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.59.0"
features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_System",
    "Win32_System_Com",
    "Win32_UI",
    "Win32_UI_Shell",
]

[dev-dependencies.dirs]
version = "5.0.1"

[profile.release]
lto = true
codegen-units = 1