[package]
name = "simple-home-dir"
version = "0.5.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/splurf/simple-home-dir"
authors = ["Evan Schwartzentruber <evandotschwartzentruber@gmail.com>"]
description = "Deprecated: This crate is no longer necessary as Rust now provides an official home_dir() method. Use `std::env::home_dir()` instead."
keywords = ["home", "directory", "home_dir"]
categories = ["accessibility"]
exclude = [".github/", ".gitignore", "LICENSE"]

[profile.release]
lto = true
codegen-units = 1